rust/src/bindings.rs

extern "C" { pub fn bitunpack256w32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitunpack128v64 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u64 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitunpack256v32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitzunpack256v32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitxunpack256v32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitdunpack256v32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitd1unpack256v32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitfunpack256v32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitf1unpack256v32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitunpack128h32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitzunpack128h32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitdunpack128h32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitd1unpack128h32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn _bitunpack128v16 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_ushort , b : :: std :: os :: raw :: c_uint , pex : * mut :: std :: os :: raw :: c_ushort , bb : * mut :: std :: os :: raw :: c_uchar) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn _bitdunpack128v16 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_ushort , start : :: std :: os :: raw :: c_ushort , b : :: std :: os :: raw :: c_uint , pex : * mut :: std :: os :: raw :: c_ushort , bb : * mut :: std :: os :: raw :: c_uchar) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn _bitd1unpack128v16 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_ushort , start : :: std :: os :: raw :: c_ushort , b : :: std :: os :: raw :: c_uint , pex : * mut :: std :: os :: raw :: c_ushort , bb : * mut :: std :: os :: raw :: c_uchar) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn _bitzunpack128v16 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_ushort , start : :: std :: os :: raw :: c_ushort , b : :: std :: os :: raw :: c_uint , pex : * mut :: std :: os :: raw :: c_ushort , bb : * mut :: std :: os :: raw :: c_uchar) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn _bitunpack128v32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint , pex : * mut :: std :: os :: raw :: c_uint , bb : * mut :: std :: os :: raw :: c_uchar) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn _bitdunpack128v32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint , pex : * mut :: std :: os :: raw :: c_uint , bb : * mut :: std :: os :: raw :: c_uchar) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn _bitd1unpack128v32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint , pex : * mut :: std :: os :: raw :: c_uint , bb : * mut :: std :: os :: raw :: c_uchar) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn _bitzunpack128v32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint , pex : * mut :: std :: os :: raw :: c_uint , bb : * mut :: std :: os :: raw :: c_uchar) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn _bitunpack128h32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint , pex : * mut :: std :: os :: raw :: c_uint , bb : * mut :: std :: os :: raw :: c_uchar) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn _bitdunpack128h32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint , pex : * mut :: std :: os :: raw :: c_uint , bb : * mut :: std :: os :: raw :: c_uchar) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn _bitd1unpack128h32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint , pex : * mut :: std :: os :: raw :: c_uint , bb : * mut :: std :: os :: raw :: c_uchar) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn _bitunpack256w32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint , pex : * mut :: std :: os :: raw :: c_uint , bb : * mut :: std :: os :: raw :: c_uchar) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn _bitunpack128v64 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u64 , b : :: std :: os :: raw :: c_uint , pex : * mut u32 , bb : * mut :: std :: os :: raw :: c_uchar) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn _bitunpack256v32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint , pex : * mut :: std :: os :: raw :: c_uint , bb : * mut :: std :: os :: raw :: c_uchar) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn _bitdunpack256v32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint , pex : * mut :: std :: os :: raw :: c_uint , bb : * mut :: std :: os :: raw :: c_uchar) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn _bitd1unpack256v32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint , pex : * mut :: std :: os :: raw :: c_uint , bb : * mut :: std :: os :: raw :: c_uchar) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn _bitzunpack256v32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint , pex : * mut :: std :: os :: raw :: c_uint , bb : * mut :: std :: os :: raw :: c_uchar) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bit8 (in_ : * mut u8 , n : :: std :: os :: raw :: c_uint , px : * mut u8) -> u8 ; }
extern "C" { pub fn bit16 (in_ : * mut u16 , n : :: std :: os :: raw :: c_uint , px : * mut u16) -> u16 ; }
extern "C" { pub fn bit32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , px : * mut u32) -> u32 ; }
extern "C" { pub fn bit64 (in_ : * mut u64 , n : :: std :: os :: raw :: c_uint , px : * mut u64) -> u64 ; }
extern "C" { pub fn bit256v32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , px : * mut u32) -> u32 ; }
extern "C" { pub fn bitd8 (in_ : * mut u8 , n : :: std :: os :: raw :: c_uint , px : * mut u8 , start : u8) -> u8 ; }
extern "C" { pub fn bitd16 (in_ : * mut u16 , n : :: std :: os :: raw :: c_uint , px : * mut u16 , start : u16) -> u16 ; }
extern "C" { pub fn bitd32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , px : * mut u32 , start : u32) -> u32 ; }
extern "C" { pub fn bitd64 (in_ : * mut u64 , n : :: std :: os :: raw :: c_uint , px : * mut u64 , start : u64) -> u64 ; }
extern "C" { pub fn bitd256v32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , px : * mut u32 , start : u32) -> u32 ; }
extern "C" { pub fn bitddec8 (p : * mut u8 , n : :: std :: os :: raw :: c_uint , start : u8) ; }
extern "C" { pub fn bitddec16 (p : * mut u16 , n : :: std :: os :: raw :: c_uint , start : u16) ; }
extern "C" { pub fn bitddec32 (p : * mut u32 , n : :: std :: os :: raw :: c_uint , start : u32) ; }
extern "C" { pub fn bitddec64 (p : * mut u64 , n : :: std :: os :: raw :: c_uint , start : u64) ; }
extern "C" { pub fn bits128v16 (in_ : * mut u16 , n : :: std :: os :: raw :: c_uint , px : * mut u16 , start : u16) -> u16 ; }
extern "C" { pub fn bits128v32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , px : * mut u32 , start : u32) -> u32 ; }
extern "C" { pub fn bitd18 (in_ : * mut u8 , n : :: std :: os :: raw :: c_uint , px : * mut u8 , start : u8) -> u8 ; }
extern "C" { pub fn bitd116 (in_ : * mut u16 , n : :: std :: os :: raw :: c_uint , px : * mut u16 , start : u16) -> u16 ; }
extern "C" { pub fn bitd132 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , px : * mut u32 , start : u32) -> u32 ; }
extern "C" { pub fn bitd164 (in_ : * mut u64 , n : :: std :: os :: raw :: c_uint , px : * mut u64 , start : u64) -> u64 ; }
extern "C" { pub fn bitd1256v32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , px : * mut u32 , start : u32) -> u32 ; }
